# AuditFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  _quarto.yml  pyproject.toml
auditflow/: __main__.py  cli.py  project.py  template_utils.py  timeline.py
auditflow/ai/: __init__.py  config.py  context.py  preflight.py  prompts.py  providers.py  quality.py  service.py
auditflow/commands/: __init__.py  archive.py  audit_program.py  evidence.py  feedback.py  init_project.py  observations.py  planning.py  report.py  status.py  validate.py  workpapers.py
auditflow/schemas/: audit.schema.json  audit_program.schema.json  evidence.schema.json  observations.schema.json  risks.schema.json
auditflow/templates/: .gitignore  _quarto.yml  audit_story.qmd  decisions.yml  feedback_request.txt  feedback_response.yml  initial_data.yml  notification_letter.md  planning_decision.yml  planning_document.qmd  report.qmd  stakeholders.yml  team.yml  timeline.yml  workpaper.qmd
auditflow/templates/ai/: audit_program_review_system.md  observation_draft_system.md  observation_review_system.md
auditflow/templates/styles/: auditflow.css  brand.css  report.css
docs/: customization.md  data_analysis.md  git_collaboration.md  llm_integration.md  methodology.md  project_structure.md  user_journey.md  vscode_cli.md  workflow.md
examples/procurement_audit/: .gitignore  _quarto.yml  initial_data.yml
examples/procurement_audit/00_admin/: ai.yml  decisions.yml  stakeholders.yml  team.yml  timeline.yml
examples/procurement_audit/01_planning/: planning_decision.yml  planning_document.qmd
examples/procurement_audit/02_notification/: notification_letter.md
examples/procurement_audit/03_audit_program/: audit_program.yml
examples/procurement_audit/04_evidence/: evidence_manifest.yml
examples/procurement_audit/04_evidence/01_regulations/: procurement_process_regulation.md
examples/procurement_audit/04_evidence/02_raw_data/: approval_matrix.csv  approval_workflow.csv  goods_receipts.csv  invoices.csv  payments.csv  purchase_orders.csv  suppliers.csv  users.csv
examples/procurement_audit/04_evidence/03_correspondence/: candidate_review_dispositions.csv  (+1 more)
examples/procurement_audit/05_workpapers/: WP-C-001.qmd  WP-C-002.qmd  WP-C-003.qmd  WP-R-003-NO-CONTROL.qmd
examples/procurement_audit/06_observations/: OBS-001.yml  OBS-002.yml  OBS-003.yml
examples/procurement_audit/07_reporting/: report.qmd
examples/procurement_audit/08_feedback/: README.md  feedback_summary.qmd
examples/procurement_audit/09_archive/: audit_story.css  audit_story.qmd
examples/procurement_audit/styles/: auditflow.css  auditflow_theme.py  brand.yml
schemas/: audit_program.schema.json  observations.schema.json
tests/: test_ai_config.py  test_ai_preflight.py  test_ai_providers.py  test_ai_quality.py  test_ai_service.py  test_audit_program.py  test_evidence.py  test_procurement_example.py  test_validate.py
(+25 files in other folders)
