[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditflow"
version = "0.1.0"
description = "A VSCode-based framework for reproducible, data-driven internal audits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0.0"
]

[project.scripts]
auditflow = "auditflow.cli:app"

[tool.setuptools.packages.find]
include = ["auditflow*"]
exclude = ["docs*", "examples*", "schemas*", "styles*", "tests*"]

[tool.setuptools.package-data]
auditflow = [
    "templates/*.yml",
    "templates/*.qmd",
    "templates/*.txt",
    "templates/*.css",
    "templates/styles/*.css",
    "templates/.vscode/*.json"
]

[tool.ruff]
line-length = 100
