[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditflow"
version = "0.1.0"
description = "A VSCode-based framework for reproducible, data-driven internal audits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "jsonschema>=4.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "jupyter>=1.1.0"
]
test = [
    "pandas>=2.2.0",
    "pytest>=8.0.0"
]

[project.scripts]
auditflow = "auditflow.cli:app"

[tool.setuptools.packages.find]
include = ["auditflow*"]
exclude = ["docs*", "examples*", "schemas*", "styles*", "tests*"]

[tool.setuptools.package-data]
auditflow = [
    "schemas/*.json",
    "templates/*.yml",
    "templates/*.qmd",
    "templates/*.md",
    "templates/*.txt",
    "templates/*.css",
    "templates/.gitignore",
    "templates/ai/*.md",
    "templates/styles/*.css",
    "templates/.vscode/*.json"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: checks external tools such as Quarto when they are available"
]
